--- a/Appunti di Sicurezza delle Reti.lyx
+++ b/Appunti di Sicurezza delle Reti.lyx
@@ -5258,6 +5258,481 @@ noprefix "false"
 Otteniamo gli stessi residui quadratici trovati con i test, in ordine diverso.
 \end_layout
 
+\begin_layout Chapter
+Cifrari elementari
+\end_layout
+
+\begin_layout Section
+Introduzione
+\end_layout
+
+\begin_layout Standard
+Facendo riferimento alla figura 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "fig:Scenario-fondamentale- comunicazione"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+, possiamo individuare la caratteristica del sistema di cifratura modellizzato:
+ esso usa la stessa chiave 
+\begin_inset Formula $k$
+\end_inset
+
+ per la cifratura e la decifratura del messaggio; ammettiamo che essa sia
+ consegnata al destinatario tramite un canale sicuro.
+\end_layout
+
+\begin_layout Standard
+Il testo in chiaro è definito all'interno di tutti i possibili messaggi
+ in chiaro componibili con l'alfabeto a disposizione (
+\begin_inset Formula $p\in\mathscr{P}$
+\end_inset
+
+), il messaggio cifrato è anch'esso definito all'interno di un insieme di
+ ogni possibile messaggio cifrato componibile (
+\begin_inset Formula $c\in\mathscr{C}$
+\end_inset
+
+), infine la chiave appartiene all'insieme di tutte le possibili chiavi
+ componibili (
+\begin_inset Formula $k\in\mathscr{K}$
+\end_inset
+
+).
+\end_layout
+
+\begin_layout Standard
+Ogni chiave, all'interno dello spazio delle chiavi, è definita una regola
+ di cifratura (
+\begin_inset Formula $\forall k\in\mathscr{K}\tc E_{k}\in\mathscr{E}$
+\end_inset
+
+) e anche una regola di decifratura (
+\begin_inset Formula $\forall k\in\mathscr{K}\tc D_{k}\in\mathscr{D}$
+\end_inset
+
+), entrambe dipendenti da 
+\begin_inset Formula $k$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+Deve valere che la cifratura sia invertibile con la decifratura, ovvero
+ 
+\begin_inset Formula $\forall k\in\mathscr{K},\,p\in\mathscr{P},\,c\in\mathscr{C}\tc c=E_{k}\left(p\right)\land p=D_{k}\left(c\right)$
+\end_inset
+
+; in caso contrario la decifratura non sarebbe più possibile (collisioni
+ durante la cifratura di messaggi differenti).
+\end_layout
+
+\begin_layout Section
+Cifrari a scorrimento e sostituzione
+\end_layout
+
+\begin_layout Subsection
+Cifrario di Cesare
+\end_layout
+
+\begin_layout Standard
+Il cifrario di Cesare utilizza uno scorrimento dell'alfabeto, la chiave
+ stessa è un simbolo dell'alfabeto:
+\begin_inset Formula 
+\[
+\mathscr{P}=\mathscr{C}=\mathscr{K}=\mathbb{Z}_{n}
+\]
+
+\end_inset
+
+Si verifica nel caso dell'alfabeto inglese vale 
+\begin_inset Formula $n=26$
+\end_inset
+
+; la funzione di cifratura e di decifratura si indicano come:
+\begin_inset Formula 
+\[
+\begin{array}{c}
+c=E_{k}\left(p\right)=\mod{\left(p+k\right)}n\\
+p=D_{k}\left(c\right)=\mod{\left(c-k\right)}n
+\end{array}
+\]
+
+\end_inset
+
+Possiamo attaccare questo cifrario con una ricerca esaustiva dello spazio
+ delle chiavi, sapendo che 
+\begin_inset Formula $\left|\mathscr{K}\right|=n$
+\end_inset
+
+, oppure possiamo confrontare un testo in chiaro noto con un testo cifrato
+ per ottenere la chiave (
+\begin_inset Formula $k=p-c$
+\end_inset
+
+).
+\end_layout
+
+\begin_layout Standard
+Chiamiamo questo tipo di cifrario 
+\emph on
+mono-alfabetico
+\emph default
+, ovvero ad ogni carattere corrisponde un carattere.
+\end_layout
+
+\begin_layout Subsection
+Cifrario affine
+\end_layout
+
+\begin_layout Standard
+Utilizza una combinazione lineare applicata al testo in chiaro; per questo
+ cifrario vale:
+\begin_inset Formula 
+\[
+\mathscr{P}=\mathscr{C}=\mathbb{Z}_{n},\,\mathscr{K}=k\left(a,\,b\right)
+\]
+
+\end_inset
+
+La funzione di cifratura e di decifratura si indicano come:
+\begin_inset Formula 
+\[
+\begin{array}{c}
+c=E_{k}\left(p\right)=\mod{\left(ap+b\right)}n\\
+p=D_{k}\left(c\right)=\mod{\left(c-b\right)a^{-1}}n
+\end{array}
+\]
+
+\end_inset
+
+Bisogna prendere 
+\begin_inset Formula $a,\,b\in\mathbb{Z}_{n}$
+\end_inset
+
+ e per la presenza dell'inversione di 
+\begin_inset Formula $a$
+\end_inset
+
+, è necessario che esso sia primo relativo a 
+\begin_inset Formula $n$
+\end_inset
+
+ (
+\begin_inset Formula $a\perp n$
+\end_inset
+
+); se così non fosse, si verificherebbero delle collisioni nella cifratura.
+\end_layout
+
+\begin_layout Subsection
+Cifrario a sostituzione
+\end_layout
+
+\begin_layout Standard
+Ogni carattere è sostituito da un'altro, secondo una tabella arbitraria;
+ esso è la generalizzazione dei due precedenti cifrari (la chiave è una
+ permutazione dell'alfabeto), e vale
+\begin_inset Formula 
+\[
+\mathscr{P}=\mathscr{C}=\mathbb{Z}_{n},\,\left|\mathscr{K}\right|=n!
+\]
+
+\end_inset
+
+La chiave è la tabella di sostituzione, e le funzioni di cifratura e decifratura
+ sono determinate dalle sostituzioni indicate nella tabella.
+\end_layout
+
+\begin_layout Standard
+Possiamo attaccare questo cifrario (e tutti gli altri cifrari mono-alfabetici)
+ analizzando l'entropia dei singoli simboli dell'alfabeto: nel caso di messaggi
+ cifrati in linguaggio naturale, l'analisi delle frequenze dei simboli può
+ rivelare lettere molto usate.
+\end_layout
+
+\begin_layout Standard
+Altri attacchi di questo tipo includono l'analisi della frequenza dei digrammi
+ e trigrammi (coppie e triple di lettere).
+\end_layout
+
+\begin_layout Subsection
+Cifrario di Vigenère
+\end_layout
+
+\begin_layout Standard
+Questo cifrario lavora su blocchi di 
+\begin_inset Formula $h$
+\end_inset
+
+ caratteri alla volta, e per questo viene detto poli-alfabetico.
+ In questo caso abbiamo:
+\begin_inset Formula 
+\[
+\mathscr{P}=\mathscr{C}=\mathscr{K}=\left(\mathbb{Z}_{n}\right)^{h}
+\]
+
+\end_inset
+
+La chiave, il testo in chiaro e il testo cifrato saranno vettori di 
+\begin_inset Formula $h$
+\end_inset
+
+ elementi:
+\begin_inset Formula 
+\[
+k=\left(k_{1},\,\ldots,\,k_{h}\right),\,p=\left(p_{1},\,\ldots,\,p_{h}\right),\,c=\left(c_{1},\,\ldots,\,c_{h}\right)
+\]
+
+\end_inset
+
+Le regole di cifratura e decifratura sono le stesse del cifrario di Cesare,
+ applicate su ciascun elemento del vettore 
+\begin_inset Formula $p$
+\end_inset
+
+ o 
+\begin_inset Formula $c$
+\end_inset
+
+:
+\begin_inset Formula 
+\[
+\begin{array}{c}
+c=E_{k}\left(p\right)=\left(\mod{p_{1}+k_{1}}n,\,\ldots,\,\mod{p_{h}+k_{h}}n\right)\\
+p=D_{k}\left(c\right)=\left(\mod{c_{1}-k_{1}}n,\,\ldots,\,\mod{c_{h}-k_{h}}n\right)
+\end{array}
+\]
+
+\end_inset
+
+In questo cifrario gli scorrimenti per ciascun elemento del blocco dipendono
+ dalla posizione al suo interno; la stessa lettera verrà cifrata in modo
+ diverso a seconda della sua posizione nel blocco; l'analisi di frequenza
+ si applica, suddividendo la frequenza di un simbolo su 
+\begin_inset Formula $h$
+\end_inset
+
+ possibili modi di cifrarlo (la difficoltà cresce all'aumentare di 
+\begin_inset Formula $h$
+\end_inset
+
+).
+\end_layout
+
+\begin_layout Section
+Cifrario a permutazione
+\end_layout
+
+\begin_layout Standard
+Si tratta di un cifrario a blocco (lavora su 
+\begin_inset Formula $h$
+\end_inset
+
+ simboli alla volta), che permuta le posizioni dei caratteri in ogni blocco.
+ Al contrario del cifrario a sostituzione, la permutazione in ogni blocco
+ è indipendente.
+ La chiave adottata è una permutazione delle posizioni all'interno del blocco.
+\end_layout
+
+\begin_layout Example
+
+\emph on
+Dato il cifrario a permutazione con blocchi di dimensione 
+\begin_inset Formula $n=6$
+\end_inset
+
+ e permutazione 
+\begin_inset Formula $k=\left(3,\,5,\,1,\,6,\,4,\,2\right)$
+\end_inset
+
+, cifrare il messaggio 
+\begin_inset Formula $p=``\text{she sells sea shells}"$
+\end_inset
+
+ (gli spazi tra le parole non sono caratteri dell'alfabeto).
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula $\checked$
+\end_inset
+
+Identifichiamo i blocchi di 
+\begin_inset Formula $n=6$
+\end_inset
+
+ caratteri; il primo blocco da sinistra è 
+\begin_inset Formula $\mathbb{B}_{1}=``\text{shesel}"$
+\end_inset
+
+, che possiamo indicare come:
+\begin_inset Formula 
+\[
+p=\Bigl(\begin{array}{cccccc}
+{\scriptscriptstyle 1} & {\scriptscriptstyle 2} & {\scriptscriptstyle 3} & {\scriptscriptstyle 4} & {\scriptscriptstyle 5} & {\scriptscriptstyle 6}\\
+\text{s,} & \text{h}, & \text{e}, & \text{s}, & \text{e}, & \text{l}
+\end{array}\Bigr)
+\]
+
+\end_inset
+
+A questo punto applichiamo la permutazione 
+\begin_inset Formula $k$
+\end_inset
+
+, che sposta i simboli del blocco nella seguente configurazione:
+\begin_inset Formula 
+\[
+c=\Bigl(\begin{array}{cccccc}
+{\scriptscriptstyle 3} & {\scriptscriptstyle 5} & {\scriptscriptstyle 1} & {\scriptscriptstyle 6} & {\scriptscriptstyle 4} & {\scriptscriptstyle 2}\\
+\text{e,} & \text{e}, & \text{s}, & \text{l}, & \text{s}, & \text{h}
+\end{array}\Bigr)
+\]
+
+\end_inset
+
+
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+demo
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Questo cifrario risulta poli-alfabetico, e ogni blocco di lunghezza 
+\begin_inset Formula $n$
+\end_inset
+
+ può essere cifrato in 
+\begin_inset Formula $n!$
+\end_inset
+
+ modi differenti.
+\end_layout
+
+\begin_layout Section
+Proprietà fondamentali dei cifrari a blocchi
+\end_layout
+
+\begin_layout Standard
+In un cifrario a blocco di lunghezza 
+\begin_inset Formula $n$
+\end_inset
+
+, si prende un messaggio in chiaro e a partire da esso si ottiene un messaggio
+ cifrato, entrambi della stessa lunghezza (
+\begin_inset Formula $\left|p\right|=\left|c\right|=n$
+\end_inset
+
+).
+\end_layout
+
+\begin_layout Standard
+Nell'articolo
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+
+\emph on
+\begin_inset Quotes eld
+\end_inset
+
+Communication Theory of Secrecy Systems
+\begin_inset Quotes erd
+\end_inset
+
+ 
+\emph default
+(1949), Bell System Technical Journal
+\end_layout
+
+\end_inset
+
+ sulla crittografia pubblicato da Shannon, egli espone due proprietà fondamental
+i che ogni sistema crittografico dovrebbe avere:
+\end_layout
+
+\begin_layout Description
+
+\noun on
+Diffusione
+\noun default
+ Si ha diffusione perfetta se, cambiando 1 bit del blocco in chiaro, tutti
+ i bit del blocco cifrato corrispondente cambiano in maniera apparentemente
+ casuale, con probabilità 
+\begin_inset Formula $1/2$
+\end_inset
+
+.
+ La perfetta diffusione vale anche nel senso opposto: cambiando 1 bit del
+ blocco cifrato, tutti i bit del blocco in chiaro corrispondente cambiano
+ con probabilità 
+\begin_inset Formula $1/2$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Description
+
+\noun on
+Confusione
+\noun default
+ La chiave deve avere effetto su tutti i bit del blocco cifrato: a parità
+ di blocco in chiaro, se cambia 1 bit della chiave, tutti i bit del blocco
+ cifrato cambieranno, con probabilità 
+\begin_inset Formula $1/2$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+Queste due proprietà si riassumono nella seguente affermazione:
+\end_layout
+
+\begin_layout Proposition
+\begin_inset CommandInset label
+LatexCommand label
+name "prop:Proprietà-fondamentali-cifrari-Shannon"
+
+\end_inset
+
+Non solo ogni bit della chiave ha effetto su 
+\bar under
+tutti
+\bar default
+ i bit del blocco cifrato, ma anche tutti i bit della chiave hanno effetto
+ su 
+\bar under
+ogni
+\bar default
+ bit del blocco cifrato.
+\end_layout
+
+\begin_layout Chapter
+Cifrario DES
+\end_layout
+
+\begin_layout Standard
+Testo qui
+\end_layout
+
 \begin_layout Chapter*
 Esercizi
 \end_layout
