--- a/Appunti di Sicurezza delle Reti.tex
+++ b/Appunti di Sicurezza delle Reti.tex
@@ -234,7 +234,7 @@ in ogni caso $10^{97}$ possibili candidati.
 
 Prendiamo\marginpar{La funzione $\protect\mcd ab$ indica il massimo comune divisore tra
 $a$ e $b$} ora $a,\,b\in\mathbb{Z}$ tali che $\mcd ab=1$: in tal caso diremo
-che $e$ e $b$ sono \emph{coprimi} o \emph{primi relativi}, indicando
+che $a$ e $b$ sono \emph{coprimi} o \emph{primi relativi}, indicando
 la loro relazione come $a\perp b$; da questa relazione segue che
 due numeri coprimi non hanno fattori in comune.
 
